# c2pa-rs

./: Cargo.toml
benchmarks/: .gitignore  Cargo.toml  README.md
benchmarks/src/: cli.rs  main.rs
benchmarks/src/live_signing/: mod.rs
benchmarks/src/signer/: mod.rs  test.json
cli/: Cargo.toml
cli/sample/: test.json
cli/src/: main.rs
cli/src/live/: c2pa_builder.rs  manifest_signer.rs  manifold.rs  merkle_tree.rs  mod.rs  regexp.rs  routes.rs  utility.rs
internal/status-tracker/src/: validation_codes.rs
sdk/: Cargo.toml
sdk/src/: builder.rs  claim.rs  lib.rs  manifest.rs  reader.rs  store.rs
sdk/src/assertions/: bmff_hash.rs  labels.rs  mod.rs  rolling_hash.rs
sdk/src/asset_handlers/: bmff_io.rs  c2pa_io.rs
sdk/src/utils/: live.rs  merkle.rs  mime.rs  mod.rs  rolling_hash.rs
