[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
atree = "0.5.2"
c2pa = { path = "../sdk", version = "0.45.1", features = [
	"fetch_remote_manifests",
	"file_io",
	"add_thumbnails",
	"pdf"
] }
c2pa-crypto = { path = "../internal/crypto", version = "0.6.1" }
clap = { version = "4.5.10", features = ["derive", "env"] }
log = "0.4"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
