[package]
name = "c2patool"
default-run = "c2patool"
version = "0.13.1"
description = "Tool for displaying and creating C2PA manifests."
authors = [
    "Gavin Peacock <gpeacock@adobe.com>",
    "Maurice Fisher <mfisher@adobe.com>",
]
license = "MIT OR Apache-2.0"
documentation = "https://opensource.contentauthenticity.org/docs/c2patool"
readme = "README.md"
keywords = ["c2pa", "xmp", "metadata"]
edition = "2018"
homepage = "https://contentauthenticity.org"
repository = "https://github.com/contentauth/c2pa-rs/tree/main/cli"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
# Workaround for https://github.com/est31/cargo-udeps/issues/293.

[dependencies]
anyhow = "1.0"
atree = "0.5.2"
c2pa = { path = "../sdk", version = "0.45.1", features = [
	"fetch_remote_manifests",
	"file_io",
	"add_thumbnails",
	"pdf"
] }
c2pa-crypto = { path = "../internal/crypto", version = "0.6.1" }
clap = { version = "4.5.10", features = ["derive", "env"] }
env_logger = "0.11.4"
glob = "0.3.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.3"
treeline = "0.1.0"
pem = "3.0.3"
openssl = { version = "0.10.61", features = ["vendored"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
url = "2.5.0"

# Live
bytes = "1.10.1"
chrono = "0.4.40"
dashmap = "6.1.0"
dash-mpd = { version = "0.18.2" }
itertools = "0.8.0"
m3u8-rs = { version = "6.0.0", path = "../../m3u8-rs"}
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"

[dev-dependencies]
assert_cmd = "2.0.14"
httpmock = "0.7.0"
predicates = "3.1"
mockall = "0.13.0"

[package.metadata.binstall]
# Use defaults
